--- a/Windows/requirements.txt
+++ b/Windows/requirements.txt
@@ -7,8 +7,12 @@ fastapi==0.63.0
 h11==0.12.0
 idna==3.1
 multidict==5.1.0
+psutil==5.8.0
 pydantic==1.7.3
+pyngrok==5.0.1
+pyperclip==1.8.1
 pywin32==300
+PyYAML==5.4
 starlette==0.13.6
 typing-extensions==3.7.4.3
 uvicorn==0.13.3
