--- a/Windows/requirements.txt
+++ b/Windows/requirements.txt
@@ -1,22 +1,42 @@
 aiohttp==3.7.3
 async-timeout==3.0.1
 attrs==20.3.0
+autopep8==1.5.4
+cachetools==4.2.0
+certifi==2020.12.5
 chardet==3.0.4
 click==7.1.2
+elevate==0.1.3
 fastapi==0.63.0
+google-api-core==1.25.0
+google-api-python-client==1.12.8
+google-auth==1.24.0
+google-auth-httplib2==0.0.4
+google-auth-oauthlib==0.4.2
+googleapis-common-protos==1.52.0
 h11==0.12.0
-idna==3.1
+httplib2==0.18.1
+idna==2.10
 multidict==5.1.0
+oauthlib==3.1.0
+protobuf==3.14.0
 psutil==5.8.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycodestyle==2.6.0
 pydantic==1.7.3
 pyngrok==5.0.1
 pyperclip==1.8.1
-pywin32==300
+pytz==2020.5
 PyYAML==5.4
-smtp==0.1.0
+requests==2.25.1
+requests-oauthlib==1.3.0
+rsa==4.7
+six==1.15.0
 starlette==0.13.6
-stua==0.2
+toml==0.10.2
 typing-extensions==3.7.4.3
+uritemplate==3.0.1
+urllib3==1.26.2
 uvicorn==0.13.3
-WMI==1.5.1
 yarl==1.6.3
