--- a/Ubuntu/requirements.txt
+++ b/Ubuntu/requirements.txt
@@ -6,7 +6,6 @@ cachetools==4.2.0
 certifi==2020.12.5
 chardet==3.0.4
 click==7.1.2
-clipboard==0.0.4
 elevate==0.1.3
 fastapi==0.63.0
 google-api-core==1.25.0
@@ -29,6 +28,8 @@ pydantic==1.7.3
 PyMsgBox==1.0.9
 pyngrok==5.0.1
 pyperclip==1.8.1
+pysystemd==1.0.3
+python-xlib==0.26
 pytz==2020.5
 PyYAML==5.4
 requests==2.25.1
@@ -36,6 +37,7 @@ requests-oauthlib==1.3.0
 rsa==4.7
 six==1.15.0
 starlette==0.13.6
+stopit==1.1.2
 toml==0.10.2
 typing-extensions==3.7.4.3
 uritemplate==3.0.1
