--- a/Ubuntu/requirements.txt
+++ b/Ubuntu/requirements.txt
@@ -8,6 +8,7 @@ chardet==3.0.4
 click==7.1.2
 elevate==0.1.3
 fastapi==0.63.0
+fastapi-utils==0.2.1
 google-api-core==1.25.0
 google-api-python-client==1.12.8
 google-auth==1.24.0
@@ -36,6 +37,7 @@ requests==2.25.1
 requests-oauthlib==1.3.0
 rsa==4.7
 six==1.15.0
+SQLAlchemy==1.3.22
 starlette==0.13.6
 stopit==1.1.2
 toml==0.10.2
