--- a/Windows/requirements.txt
+++ b/Windows/requirements.txt
@@ -9,17 +9,10 @@ click==7.1.2
 elevate==0.1.3
 fastapi==0.63.0
 fastapi-utils==0.2.1
-google-api-core==1.25.0
-google-api-python-client==1.12.8
-google-auth==1.24.0
-google-auth-httplib2==0.0.4
-google-auth-oauthlib==0.4.2
-googleapis-common-protos==1.52.0
 h11==0.12.0
 httplib2==0.18.1
 idna==2.10
 multidict==5.1.0
-oauthlib==3.1.0
 protobuf==3.14.0
 psutil==5.8.0
 pyasn1==0.4.8
@@ -29,6 +22,8 @@ pydantic==1.7.3
 PyMsgBox==1.0.9
 pyngrok==5.0.1
 pyperclip==1.8.1
+python-dotenv==0.15.0
+python-oauth2==1.1.1
 pytz==2020.5
 pywin32==300
 PyYAML==5.4
